# CryptoMoon

./: .gitignore  COMPLETE_SETUP.md  COMPLETE_SETUP_GUIDE.md  DEMO_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile.backend  FINAL_README.md  FINAL_STATUS.md  FIX_ENCODING_ISSUE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  MIGRATION_GUIDE.md  MVP_COMPLETE.md  Makefile  NEXT_STEPS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  QUICKSTART.md  QUICK_START_DEMO.md  README.md  README_DEMO.md  SETUP_COMPLETE.md  START_HERE.md  WEBSOCKET_GUIDE.md  check_env_encoding.py  check_psycopg2.py  debug_funding_parser.py  docker-compose.yml  pyproject.toml  start.bat  start.sh  test_db_connection.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_gate_mexc_position.py  003_add_binance_ourbit_position.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  rate_limit.py  redis_client.py  security.py
app/models/: __init__.py  signal.py  user.py
app/schemas/: __init__.py  auth.py  market.py  signal.py  user.py
app/services/auth/: __init__.py  router.py
app/services/market/: __init__.py  router.py  service.py
app/services/notifications/: __init__.py  email.py  router.py  (+1 more)
app/tasks/: __init__.py  market_data.py  scheduler.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
tests/: conftest.py  test_auth.py  test_parsers.py  test_security.py
(+25 files in other folders)
